--- a/all_curves/index.html
+++ b/all_curves/index.html
@@ -10,273 +10,273 @@
   </h1>
   <ul>
    <li>
-    <a href="./C rate-Cycle number.html">
+    <a href="C rate-Cycle number.html">
      C rate-Cycle number
     </a>
    </li>
    <li>
-    <a href="./C rate-Discharge capacity.html">
+    <a href="C rate-Discharge capacity.html">
      C rate-Discharge capacity
     </a>
    </li>
    <li>
-    <a href="./C rate-Voltage.html">
+    <a href="C rate-Voltage.html">
      C rate-Voltage
     </a>
    </li>
    <li>
-    <a href="./Carrier mobility-Seebeck coefficient.html">
+    <a href="Carrier mobility-Seebeck coefficient.html">
      Carrier mobility-Seebeck coefficient
     </a>
    </li>
    <li>
-    <a href="./Charge capacity-Discharge capacity.html">
+    <a href="Charge capacity-Discharge capacity.html">
      Charge capacity-Discharge capacity
     </a>
    </li>
    <li>
-    <a href="./Charge capacity-Voltage.html">
+    <a href="Charge capacity-Voltage.html">
      Charge capacity-Voltage
     </a>
    </li>
    <li>
-    <a href="./Cycle number-Discharge capacity.html">
+    <a href="Cycle number-Discharge capacity.html">
      Cycle number-Discharge capacity
     </a>
    </li>
    <li>
-    <a href="./Cycle number-Voltage.html">
+    <a href="Cycle number-Voltage.html">
      Cycle number-Voltage
     </a>
    </li>
    <li>
-    <a href="./Discharge capacity-Voltage.html">
+    <a href="Discharge capacity-Voltage.html">
      Discharge capacity-Voltage
     </a>
    </li>
    <li>
-    <a href="./Electrical conductivity-Power factor.html">
+    <a href="Electrical conductivity-Power factor.html">
      Electrical conductivity-Power factor
     </a>
    </li>
    <li>
-    <a href="./Electrical conductivity-Seebeck coefficient.html">
+    <a href="Electrical conductivity-Seebeck coefficient.html">
      Electrical conductivity-Seebeck coefficient
     </a>
    </li>
    <li>
-    <a href="./Electrical conductivity-Temperature.html">
+    <a href="Electrical conductivity-Temperature.html">
      Electrical conductivity-Temperature
     </a>
    </li>
    <li>
-    <a href="./Electrical conductivity-Thermal conductivity.html">
+    <a href="Electrical conductivity-Thermal conductivity.html">
      Electrical conductivity-Thermal conductivity
     </a>
    </li>
    <li>
-    <a href="./Electrical conductivity-ZT.html">
+    <a href="Electrical conductivity-ZT.html">
      Electrical conductivity-ZT
     </a>
    </li>
    <li>
-    <a href="./Electrical resistivity-Power factor.html">
+    <a href="Electrical resistivity-Power factor.html">
      Electrical resistivity-Power factor
     </a>
    </li>
    <li>
-    <a href="./Magnetic Field-Magnetization.html">
+    <a href="Magnetic Field-Magnetization.html">
      Magnetic Field-Magnetization
     </a>
    </li>
    <li>
-    <a href="./Magnetic Field-magnetization_Bohr.html">
+    <a href="Magnetic Field-magnetization_Bohr.html">
      Magnetic Field-magnetization_Bohr
     </a>
    </li>
    <li>
-    <a href="./Magnetic Field-magnetization_per_weight.html">
+    <a href="Magnetic Field-magnetization_per_weight.html">
      Magnetic Field-magnetization_per_weight
     </a>
    </li>
    <li>
-    <a href="./Magnetic field-Electrical resistivity.html">
+    <a href="Magnetic field-Electrical resistivity.html">
      Magnetic field-Electrical resistivity
     </a>
    </li>
    <li>
-    <a href="./Magnetic field-Magnetic field strength (H).html">
+    <a href="Magnetic field-Magnetic field strength (H).html">
      Magnetic field-Magnetic field strength (H)
     </a>
    </li>
    <li>
-    <a href="./Magnetic field-Magnetization.html">
+    <a href="Magnetic field-Magnetization.html">
      Magnetic field-Magnetization
     </a>
    </li>
    <li>
-    <a href="./Magnetic field-Thermal conductivity.html">
+    <a href="Magnetic field-Thermal conductivity.html">
      Magnetic field-Thermal conductivity
     </a>
    </li>
    <li>
-    <a href="./Magnetic field-magnetization_per_volume.html">
+    <a href="Magnetic field-magnetization_per_volume.html">
      Magnetic field-magnetization_per_volume
     </a>
    </li>
    <li>
-    <a href="./Magnetic field-magnetization_per_weight.html">
+    <a href="Magnetic field-magnetization_per_weight.html">
      Magnetic field-magnetization_per_weight
     </a>
    </li>
    <li>
-    <a href="./Magnetic field strength (H)-Electrical resistivity.html">
+    <a href="Magnetic field strength (H)-Electrical resistivity.html">
      Magnetic field strength (H)-Electrical resistivity
     </a>
    </li>
    <li>
-    <a href="./Magnetic field strength (H)-Magnetic field.html">
+    <a href="Magnetic field strength (H)-Magnetic field.html">
      Magnetic field strength (H)-Magnetic field
     </a>
    </li>
    <li>
-    <a href="./Magnetic field strength (H)-Magnetization.html">
+    <a href="Magnetic field strength (H)-Magnetization.html">
      Magnetic field strength (H)-Magnetization
     </a>
    </li>
    <li>
-    <a href="./Magnetic field strength (H)-magnetization_Bohr.html">
+    <a href="Magnetic field strength (H)-magnetization_Bohr.html">
      Magnetic field strength (H)-magnetization_Bohr
     </a>
    </li>
    <li>
-    <a href="./Magnetic field strength (H)-magnetization_per_volume.html">
+    <a href="Magnetic field strength (H)-magnetization_per_volume.html">
      Magnetic field strength (H)-magnetization_per_volume
     </a>
    </li>
    <li>
-    <a href="./Magnetic field strength (H)-magnetization_per_weight.html">
+    <a href="Magnetic field strength (H)-magnetization_per_weight.html">
      Magnetic field strength (H)-magnetization_per_weight
     </a>
    </li>
    <li>
-    <a href="./Magnetization-Magnetic field strength (H).html">
+    <a href="Magnetization-Magnetic field strength (H).html">
      Magnetization-Magnetic field strength (H)
     </a>
    </li>
    <li>
-    <a href="./Magnetization-magnetization_per_volume.html">
+    <a href="Magnetization-magnetization_per_volume.html">
      Magnetization-magnetization_per_volume
     </a>
    </li>
    <li>
-    <a href="./Magnetization-magnetization_per_weight.html">
+    <a href="Magnetization-magnetization_per_weight.html">
      Magnetization-magnetization_per_weight
     </a>
    </li>
    <li>
-    <a href="./Seebeck coefficient-Electrical conductivity.html">
+    <a href="Seebeck coefficient-Electrical conductivity.html">
      Seebeck coefficient-Electrical conductivity
     </a>
    </li>
    <li>
-    <a href="./Temperature-Carrier mobility.html">
+    <a href="Temperature-Carrier mobility.html">
      Temperature-Carrier mobility
     </a>
    </li>
    <li>
-    <a href="./Temperature-Electrical conductivity.html">
+    <a href="Temperature-Electrical conductivity.html">
      Temperature-Electrical conductivity
     </a>
    </li>
    <li>
-    <a href="./Temperature-Electrical resistivity.html">
+    <a href="Temperature-Electrical resistivity.html">
      Temperature-Electrical resistivity
     </a>
    </li>
    <li>
-    <a href="./Temperature-Hall coefficient.html">
+    <a href="Temperature-Hall coefficient.html">
      Temperature-Hall coefficient
     </a>
    </li>
    <li>
-    <a href="./Temperature-Magnetic field.html">
+    <a href="Temperature-Magnetic field.html">
      Temperature-Magnetic field
     </a>
    </li>
    <li>
-    <a href="./Temperature-Magnetic field strength (H).html">
+    <a href="Temperature-Magnetic field strength (H).html">
      Temperature-Magnetic field strength (H)
     </a>
    </li>
    <li>
-    <a href="./Temperature-Magnetization.html">
+    <a href="Temperature-Magnetization.html">
      Temperature-Magnetization
     </a>
    </li>
    <li>
-    <a href="./Temperature-Power factor.html">
+    <a href="Temperature-Power factor.html">
      Temperature-Power factor
     </a>
    </li>
    <li>
-    <a href="./Temperature-Seebeck coefficient.html">
+    <a href="Temperature-Seebeck coefficient.html">
      Temperature-Seebeck coefficient
     </a>
    </li>
    <li>
-    <a href="./Temperature-Thermal conductivity.html">
+    <a href="Temperature-Thermal conductivity.html">
      Temperature-Thermal conductivity
     </a>
    </li>
    <li>
-    <a href="./Temperature-Voltage.html">
+    <a href="Temperature-Voltage.html">
      Temperature-Voltage
     </a>
    </li>
    <li>
-    <a href="./Temperature-ZT.html">
+    <a href="Temperature-ZT.html">
      Temperature-ZT
     </a>
    </li>
    <li>
-    <a href="./Temperature-magnetization_Bohr.html">
+    <a href="Temperature-magnetization_Bohr.html">
      Temperature-magnetization_Bohr
     </a>
    </li>
    <li>
-    <a href="./Temperature-magnetization_per_volume.html">
+    <a href="Temperature-magnetization_per_volume.html">
      Temperature-magnetization_per_volume
     </a>
    </li>
    <li>
-    <a href="./Temperature-magnetization_per_weight.html">
+    <a href="Temperature-magnetization_per_weight.html">
      Temperature-magnetization_per_weight
     </a>
    </li>
    <li>
-    <a href="./Voltage-Seebeck coefficient.html">
+    <a href="Voltage-Seebeck coefficient.html">
      Voltage-Seebeck coefficient
     </a>
    </li>
    <li>
-    <a href="./Voltage-Temperature.html">
+    <a href="Voltage-Temperature.html">
      Voltage-Temperature
     </a>
    </li>
    <li>
-    <a href="./magnetization_per_volume-Magnetization.html">
+    <a href="magnetization_per_volume-Magnetization.html">
      magnetization_per_volume-Magnetization
     </a>
    </li>
    <li>
-    <a href="./magnetization_per_weight-Magnetic field strength (H).html">
+    <a href="magnetization_per_weight-Magnetic field strength (H).html">
      magnetization_per_weight-Magnetic field strength (H)
     </a>
    </li>
   </ul>
   <footer>
-   Date created: 2023-07-19 15:37:10
+   Date created: 2023-07-19 16:27:03
   </footer>
  </body>
 </html>
