--- a/all_curves/index.html
+++ b/all_curves/index.html
@@ -276,7 +276,7 @@
    </li>
   </ul>
   <footer>
-   Date created: 2023-07-20 00:37:29
+   File creation: 2023-07-20 12:49:29 JST+0900<br>Database snapshot: 2023-07-20
   </footer>
  </body>
 </html>
