--- a/all_curves/index.html
+++ b/all_curves/index.html
@@ -276,7 +276,7 @@
    </li>
   </ul>
   <footer>
-   File creation: 2023-07-20 12:49:29 JST+0900<br>Database snapshot: 2023-07-20
+   File creation: 2023-07-21 00:40:23 JST+0900<br>Database snapshot: 2023-07-21 00:00:02 JST+0900
   </footer>
  </body>
 </html>
